--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button class="botaolink"><a href="iniciante.html" style="text-decoration: none;">INICIANTE</a></button>
             <button class="botaolink"><a href="intermediario.html"
                     style="text-decoration: none;">INTERMEDIÁRIO</a></button>
-            <button class="botaolink">AVANÇADO</button>
+            <button class="botaolink"><a href="avancado.html" style="text-decoration: none;">AVANÇADO</a></button>
         </section>
 
         <section class="quemsomos">
@@ -64,16 +64,24 @@
             <p>O Speaking English Kids é um programa que concentra outras plataformas que podem auxiliar no aprendizado
                 de inglês projetado especialmente para crianças em idade escolar. Com uma metodologia lúdica, interativa
                 e adaptada às necessidades de cada etapa de aprendizado, nosso objetivo é facilitar aos usuários a terem
-                uma experiência divertida e envolvente.
+                uma experiência divertida e envolvente.O spinking inglish Kiss é separado por 3 níveis onde você encontrará 
+                o conteúdo destinado a cada nível de inglês adequado, são eles:
+
             </p>
+
+            <ol>
+                <li>Iniciante</li>
+                <li>Intermediário </li>
+                <li>Avançado</li>
+            </ol>
 
         </section>
     </main>
     <footer id="contatos" class="contatos" >
         <strong >Projeto desenvolvido por @JullianeSSousa e João Pedro, 2024.</strong>
 
-
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo9qFUW2kJ7zDl2K/hoVyfTpCxBmXpOn42tvWZ4l9iUqfBb" crossorigin="anonymous"></script>
 </body>
 
 </html>
