--- a/iniciante.html
+++ b/iniciante.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="ico/favicon.ico.ico" rel="shortcut icon" type="image/x-icon">
     <title>iniciante</title>
-    <script src="modal.js" defer></script>
     <link rel="stylesheet" href="style3.css">
 
 </head>
@@ -24,7 +23,7 @@
                 <p><strong> Nível: iniciante </strong></p>
                 <p><strong></strong></p>
 
-                <button class="inicio_botao"><a href="home.html" class="link">Home</a></button>
+                <button class="inicio_botao"><a href="index.html" class="link">Home</a></button>
             </div>
         </div>
 
@@ -77,6 +76,8 @@
         </div>
 
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo9qFUW2kJ7zDl2K/hoVyfTpCxBmXpOn42tvWZ4l9iUqfBb" crossorigin="anonymous"></script>
 
 </body>
 
