atualização de botões de nivel e acrescimo de imagens div programa

--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
         </div>
 
         <section class="botoes">
-            <button class="botaolink"><a href="iniciante.html" style="text-decoration: none;">INICIANTE</a></button>
-            <button class="botaolink"><a href="intermediario.html"
-                    style="text-decoration: none;">INTERMEDIÁRIO</a></button>
-            <button class="botaolink"><a href="avancado.html" style="text-decoration: none;">AVANÇADO</a></button>
+            <a href="iniciante.html" style="text-decoration: none;"><button class="botaolink">INICIANTE</button></a>
+            <a href="intermediario.html"
+                    style="text-decoration: none;"><button class="botaolink">INTERMEDIÁRIO</button></a>
+                    <a href="avancado.html" style="text-decoration: none;"><button class="botaolink">AVANÇADO</button></a>
         </section>
+
 
         <section class="quemsomos">
             <h1 id="quemsomos">Quem Somos</h1>
@@ -69,16 +70,33 @@
 
             </p>
 
-            <ol>
-                <li>Iniciante</li>
-                <li>Intermediário </li>
-                <li>Avançado</li>
-            </ol>
 
+
+        <section class="listaordenada">
+            
+
+                <div class="icons">
+                    <h2>Iniciante</h2>
+                    <img src="assents/ovo-de-dinossauro.png" alt="icon" class="icon">
+
+                </div>
+
+
+                <div class="icons">
+                    <h2>Intermediário</h2>
+                    <img src="assents/favicon.png" alt="icon" class="icon">
+
+                </div>
+        
+                <div class="icons">
+                    <h2>Avançado</h2>
+                    <img src="assents/dino.png" alt="icon" class="icon">
+
+                </div>
         </section>
     </main>
     <footer id="contatos" class="contatos" >
-        <strong >Projeto desenvolvido por @JullianeSSousa e João Pedro, 2024.</strong>
+        <strong >Projeto desenvolvido por <a href="https://github.com/JullianeSSousa">@JullianeSSousa</a> e <a href="https://github.com/joaopaulofg">@João Paulo,</a> 2024.</strong>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo9qFUW2kJ7zDl2K/hoVyfTpCxBmXpOn42tvWZ4l9iUqfBb" crossorigin="anonymous"></script>
