--- a/intermediario.html
+++ b/intermediario.html
@@ -21,7 +21,7 @@
                 <p><strong>Nível Intermediario </strong></p>
                 <p><strong></strong></p> 
                 
-                <button class="inicio_botao"><a href="index.html" class="link">Home</a></button>
+                <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
             </div>
         </div>
 
