--- a/iniciante.html
+++ b/iniciante.html
@@ -23,7 +23,7 @@
                 <p><strong> Nível: iniciante </strong></p>
                 <p><strong></strong></p>
 
-                <button class="inicio_botao"><a href="index.html" class="link">Home</a></button>
+                <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
             </div>
         </div>
 
@@ -38,7 +38,7 @@
                     vel. <br>Necessitatibus aliquid non ducimus in dolorem corporis, doloribus soluta corrupti itaque
                     tempora tenetur,<br> error ab assumenda!</p>
 
-                    <a href="https://open.spotify.com/playlist/55q2FnoBckNw4Z6vz3ovTh?si=7e690c431db941a7"><img src="/assents/headphone_6978475.png" alt="icone" class="icon"></a>
+                    <a href="https://open.spotify.com/playlist/55q2FnoBckNw4Z6vz3ovTh?si=7e690c431db941a7" target="_blank"><img src="/assents/headphone_6978475.png" alt="icone" class="icon"></a>
 
                    
             </div> 
