--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </section>
 
         <section class="programa">
-            <h1 id="programa">Programa</h1>
-            <p>O Speaking English Kids é um programa que concentra outras plataformas que podem auxiliar no aprendizado
+            <h1 id="programa" class="titulo">Programa</h1>
+            <p class="textoprograma">O Speaking English Kids é um programa que concentra outras plataformas que podem auxiliar no aprendizado
                 de inglês projetado especialmente para crianças em idade escolar. Com uma metodologia lúdica, interativa
                 e adaptada às necessidades de cada etapa de aprendizado, nosso objetivo é facilitar aos usuários a terem
                 uma experiência divertida e envolvente.O spinking inglish Kiss é separado por 3 níveis onde você encontrará 
