atualizando commit teste

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <p class="textoprograma">O Speaking English Kids é um programa que concentra outras plataformas que podem auxiliar no aprendizado
                 de inglês projetado especialmente para crianças em idade escolar. Com uma metodologia lúdica, interativa
                 e adaptada às necessidades de cada etapa de aprendizado, nosso objetivo é facilitar aos usuários a terem
-                uma experiência divertida e envolvente.O spinking inglish Kiss é separado por 3 níveis onde você encontrará 
+                uma experiência divertida e envolvente.O spinking inglish Kiss é separado<br> por 3 níveis onde você encontrará 
                 o conteúdo destinado a cada nível de inglês adequado, são eles:
 
             </p>
