atualização icone pagina avançado

--- a/avancado.html
+++ b/avancado.html
@@ -58,9 +58,9 @@
                     vel. <br>Necessitatibus aliquid non ducimus in dolorem corporis, doloribus soluta corrupti itaque
                     tempora tenetur,<br> error ab assumenda!</p>
                 
+                    <a href="https://pt.duolingo.com/" target="_blank" style="text-decoration: none;"> <img
+                        src="assents/reading-book_3574808.png" alt="icone" class="icon"></a>
 
-
-                <button class="botao_like"><a href="https://pt.duolingo.com/" target="_blank" style="text-decoration: none;">PRATICAR</a></button> <!-- botões-->
             </div>
         </div> 
 
