atualização de links e adicionando responsividade as paginas internas

--- a/iniciante.html
+++ b/iniciante.html
@@ -16,8 +16,8 @@
         <div class="sidebar">
 
 
-            <a href="https://storyset.com/people"><img src="assents/avatar-01-01.png" alt="profile-photo"
-                    class="profile-photo"></a>
+            <img src="assents/ovo-de-dinossauro.png" alt="profile-photo"
+                    class="profile-photo">
 
             <div class="info">
                 <p><strong> Nível: iniciante </strong></p>
@@ -65,7 +65,7 @@
                     tempora tenetur,<br> error ab assumenda!</p>
 
 
-                    <a href="https://pt.duolingo.com/" target="_blank" style="text-decoration: none;"> <img
+                    <a href="https://english-tea-class.blogspot.com/" target="_blank" style="text-decoration: none;"> <img
                         src="assents/reading-book_3574808.png" alt="icone" class="icon"></a>
 
   
