atualização nav bar paginas internas

--- a/avancado.html
+++ b/avancado.html
@@ -12,7 +12,7 @@
 <body class="container-body-avancado">
     <div class="container"> 
 
-        <div class="sidebar"> 
+        <div class="sidebar3"> 
             
 
             <img src="assents/dino.png" alt="profile-photo" class="profile-photo"></a>
