--- a/intermediario.html
+++ b/intermediario.html
@@ -12,7 +12,7 @@
 <body class="container-body">
     <div class="container"> 
 
-        <div class="sidebar"> 
+        <div class="sidebar2"> 
             
 
             <img src="assents/favicon.png" alt="profile-photo" class="profile-photo"></a>
