acrescentando botões na navbar dos niveis

--- a/avancado.html
+++ b/avancado.html
@@ -19,9 +19,11 @@
 
             <div class="info">
                 <p><strong>Nível: Avançado </strong></p>
+                <a href="intermediario.html" style="text-decoration: none;"><button class="nivel_botao">Iniciante</button></a>
+                <a href="avancado.html" style="text-decoration: none;"><button class="nivel_botao">Intermediário</button></a>
                 
                 
-                <button class="inicio_botao"><a href="index.html" class="link">Home</a></button>
+                <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
             </div>
         </div>
 
