--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="ico/menina-bock.ico" rel="shortcut icon" type="image/x-icon">
     <title>Speaking English KIDS</title>
     <link rel="stylesheet" href="estilo.css">
     <link
@@ -18,9 +19,9 @@
 
             <img src="/assents/logo-01-02.png" alt="logomenor" class="logomenor">
 
-            <img src="assents/logo_ipen20c.png" alt="logoipen" class="logomenor">
+            <a href="https://www.instagram.com/ipencb/" target="_blank"><img src="assents/logo_ipen20c.png" alt="logoipen" class="logomenor"></a>
 
-            <img src="assents/Unifacisa_-01.png" alt="logofacisa" class="logomenor">
+            <a href="https://www.instagram.com/unifacisapb/" target="_blank"><img src="assents/Unifacisa_-01.png" alt="logofacisa" class="logomenor"></a>
 
             <ul>
                 <li> <a href="#quemsomos" style="text-decoration: none;">Quem Somos</a></li>
