--- a/iniciante.html
+++ b/iniciante.html
@@ -21,7 +21,8 @@
 
             <div class="info">
                 <p><strong> Nível: iniciante </strong></p>
-                <p><strong></strong></p>
+                <a href="intermediario.html" style="text-decoration: none;"><button class="nivel_botao">Intermediário</button></a>
+                <a href="avancado.html" style="text-decoration: none;"><button class="nivel_botao">Avançado</button></a>
 
                 <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
             </div>
