atualização de caminho dos links

--- a/avancado.html
+++ b/avancado.html
@@ -19,8 +19,8 @@
 
             <div class="info">
                 <p><strong>Nível: Avançado </strong></p>
-                <a href="intermediario.html" style="text-decoration: none;"><button class="nivel_botao">Iniciante</button></a>
-                <a href="avancado.html" style="text-decoration: none;"><button class="nivel_botao">Intermediário</button></a>
+                <a href="iniciante.html" style="text-decoration: none;"><button class="nivel_botao">Iniciante</button></a>
+                <a href="intermediario.html" style="text-decoration: none;"><button class="nivel_botao">Intermediário</button></a>
                 
                 
                 <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
