--- a/intermediario.html
+++ b/intermediario.html
@@ -19,7 +19,7 @@
 
             <div class="info">
                 <p><strong>Nível: Intermediario </strong></p>
-                <a href="intermediario.html" style="text-decoration: none;"><button class="nivel_botao">Iniciante</button></a>
+                <a href="iniciante.html" style="text-decoration: none;"><button class="nivel_botao">Iniciante</button></a>
                 <a href="avancado.html" style="text-decoration: none;"><button class="nivel_botao">Avançado</button></a>
                 
                 <a href="index.html" class="link"> <button class="inicio_botao">Home</button></a>
