--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
     </main>
     <footer id="contatos" class="contatos" >
         <strong >Projeto desenvolvido por <a href="https://github.com/JullianeSSousa">@JullianeSSousa</a> e <a href="https://github.com/joaopaulofg">@João Paulo,</a> 2024.</strong>
+        <div class="iconparceria">
+        <a href="https://www.instagram.com/ipencb/" target="_blank"><img src="assents/instagram (2).png" alt="icone" class="iconparceria"></a>
+        <a href="https://www.instagram.com/unifacisapb/" target="_blank"><img src="assents/instagram (2).png" alt="icone" class="iconparceria"></a>
+        </div>
+
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeo9qFUW2kJ7zDl2K/hoVyfTpCxBmXpOn42tvWZ4l9iUqfBb" crossorigin="anonymous"></script>
